# qrusty

./: Cargo.toml  README.md
benches/: bench1.rs  big_bench.rs  my_benchmark.rs
pymisc/: Cargo.toml  pyproject.toml
pymisc/python/pymisc/: __init__.py
pymisc/src/: lib.rs
pymisc/tests/: H_fixtures.py  test_it.py
pyqrusty/: Cargo.toml  pyproject.toml
pyqrusty/python/pyqrusty/: __init__.py
pyqrusty/sandbox/: fixtures.py  test1.py
pyqrusty/src/: lib.rs
pyqrusty/tests/: H_fixtures.py  fixtures.py  perf1.py  perf_giant.py  perf_giant_rowwise.py  perf_small.py  test_H.py  test_it.py
qrusty/: Cargo.toml
qrusty/benches/: bench1.rs  bench_axpy.rs  big_bench.rs
qrusty/src/: accel.rs  fixtures.rs  lib.rs  rawio.rs  util.rs
qrusty/tests/: h8.rs
src/: accel.rs  fixtures.rs  lib.rs  main.rs  util.rs
