[package]
name = "qrusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.4"
clap = { version = "3.0", features = ["derive"] }
sprs = "0.11.0"
regex = "1"
lazy_static = "1.4.0"
ndarray = "0.15.3"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench1"
harness = false
