[package]
name = "pymisc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "pymisc"
crate-type = ["cdylib"]

[dependencies]
num-complex = ">= 0.4, < 0.4.2"
numpy = "0.16.2"

[dependencies.pyo3]
version = "0.16.5"
features = ["extension-module", "hashbrown", "num-complex"]

[dependencies.ndarray]
version = "^0.15.0"
features = ["rayon"]

[package.metadata.maturin]
python-source = "python"
