[package]
name = "qrusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
num-complex = ">= 0.4, < 0.4.2"
clap = { version = "3.0", features = ["derive"] }
flate2 = "1.0.24"
sprs = { path = "../../sprs/sprs" }
regex = "1"
lazy_static = "1.4.0"
ndarray = "0.15.3"
rayon = "1.5"
impl_ops = "0.1.1"
pyo3 = { version = "0.16.5", features = ["extension-module"] }

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench1"
harness = false
html_reports = true

[[bench]]
name = "big_bench"
harness = false
html_reports = true

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
