[package]
name = "qrusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
num-complex = ">= 0.4, < 0.4.2"
clap = { version = "3.0", features = ["derive"] }
flate2 = "1.0.24"
sprs = { git = "https://github.com/sparsemat/sprs.git", branch = "master", features = ["approx"] }
rayon-subslice = { git = "http://github.com/chetmurthy/rayon-subslice.git", branch = "master" }
regex = "1"
lazy_static = "1.4.0"
rayon = "1.5"
impl_ops = "0.1.1"
pyo3 = { version = "0.16.5", features = ["extension-module"] }
cpu-endian = "0.1.1"
log = "0.4.17"
approx = { version = "0.5.1", features = ["num-complex"] }
si-scale = "0.1.5"
conv = "0.3.3"
ndarray-rand = "0.14.0"
rulinalg = "0.4.2"

[dependencies.ndarray]
version = "^0.15.0"
features = ["rayon", "approx-0_5"]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "bench_axpy"
harness = false
html_reports = true
bench = true

[[bench]]
name = "bench1"
harness = false
html_reports = true
bench = false

[[bench]]
name = "big_bench"
harness = false
html_reports = true
bench = false

[[bin]]
name = "main"
src = "src/bin/main.rs"

[[bin]]
name = "main2"
src = "src/bin/main2.rs"

[[bin]]
name = "main11"
src = "src/bin/main11.rs"

[[bin]]
name = "main10"
src = "src/bin/main10.rs"

[[bin]]
name = "test1"
src = "src/bin/test1.rs"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
